@@ -170,13 +170,29 @@
     list of all available parameters (when &what-r; is missing or
     &nil;), by calling &sysconf; and &confstr; respectively.
  </simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>POSIX:LIMITS</function>
+ <varlistentry id="rlimit"><term><code>(<function>POSIX:RLIMIT</function>
     &optional-amp; &what-r;)</code></term>
   <listitem><simpara>Return the current and the maximal limits as two
-    values when &what-r; is specified or a list of all available limits
+    values when &what-r; is specified or a &alist; of all available
+    limits (as an <type>RLIMIT</type> structure)
     when &what-r; is missing or &nil;, by calling &getrlimit;.
  </simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>POSIX:USAGE</function>)</code></term>
+ <varlistentry id="set-rlimit"><term>(&setf; (<function>POSIX:RLIMIT</function>
+   &what-r;) (&values; cur max))</term>
+  <term>(&setf; (<function>POSIX:RLIMIT</function> &what-r;) rlimit)</term>
+  <term>(&setf; (<function>POSIX:RLIMIT</function>) rlimit-alist)</term>
+  <listitem><para>Set the limits using &setrlimit;.<orderedlist>
+     <listitem><simpara>In the first form, <replaceable>cur</replaceable>
+       and <replaceable>max</replaceable> are numbers
+       (or &nil; for <constant>RLIM_INFINITY</constant>).</simpara></listitem>
+     <listitem><simpara>In the second form, <replaceable>rlimit</replaceable>
+       is an <type>RLIMIT</type> structure.</simpara></listitem>
+     <listitem><simpara>In the third form,
+       <replaceable>rlimit-alist</replaceable> is an &alist;, as returned by
+       <code>(<function>POSIX:RLIMIT</function>)</code>.</simpara></listitem>
+ </orderedlist></para></listitem></varlistentry>
+ <varlistentry id="usage">
+  <term><code>(<function>POSIX:USAGE</function>)</code></term>
   <listitem><simpara>Return 2 structures describing the resource usage by
     the lisp process and its children, derived from &getrusage;.
   </simpara></listitem></varlistentry>
