@@ -368,10 +368,7 @@ Modules
 * New module PARI interfaces to <http://pari.math.u-bordeaux.fr/>.
   See <http://clisp.cons.org/impnotes.html#pari> for details.
 
-* Module syscalls now exports functions POSIX:CRYPT, POSIX:ENCRYPT,
-  POSIX:SETKEY, POSIX:SET-FILE-STAT, POSIX:CONVERT-MODE, POSIX:UMASK,
-  POSIX:MKNOD, OS:FILE-PROPERTIES, OS:PRIORITY, OS:PROCESS-ID,
-  POSIX:OPENLOG, POSIX:SETLOGMASK, POSIX:SYSLOG, POSIX:CLOSELOG.
+* Module syscalls is significantly expanded.
   See <http://clisp.cons.org/impnotes.html#syscalls> for details.
 
 * Module berkeley-db is vastly expanded.
